Kubernetes/crud-app/base/crud-app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: crud-app
  name: crud-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crud-app
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: crud-app
    spec:
      containers:
      - image: dmi3mis/crud-app:latest
        name: crud-app
        imagePullPolicy: Always
        resources: {}
status: {}
