Kubernetes/crud-app/base/crud-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: crud-app
  name: crud-app
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: crud-app
  type: ClusterIP
